# foo_bar_qt_issue

./: CMakeLists.txt  README.md
bar/: CMakeLists.txt  bar.cpp  bar.h  bar_global.h
foo/: CMakeLists.txt  Main.qml  foo.h  fooobjectwithbarproperty.cpp  fooobjectwithbarproperty.h  main.cpp
